--- a/styles.css
+++ b/styles.css
@@ -141,16 +141,39 @@ footer {
 .quote {
   padding: 64px;
   padding-top: 128px;
+  padding-bottom: 300px;
   text-align: center;
   color: #7c7c7c;
 }
 
 /* Projects*/
 
+.projects {
+  padding-left: 128px;
+  padding-bottom: 256px;
+}
+
+.project1 {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 256px;
+}
+
+.description {
+  padding-right: 64px;
+}
+
+.see {
+  background-color: #f7d461;
+  color: white;
+  border-radius: 2em;
+  width: fit-content;
+}
+
 /* Footer*/
 
 .write {
-  padding-left: 64px;
+  padding-left: 128px;
   padding-top: 200px;
   color: #84ac17;
 }
@@ -194,4 +217,23 @@ footer {
   .about-content {
     padding-right: 200px;
   }
+
+  .project1 {
+    padding-right: 128px;
+  }
+
+  .projects {
+    padding-bottom: 500px;
+  }
+
+  .game-img {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+/*Cube-Race*/
+
+.go-back {
+  padding: 64px;
 }
