--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,10 @@ footer {
     padding-right: 200px;
   }
 
+  .quote {
+    padding-bottom: 600px;
+  }
+
   .project1 {
     padding-right: 128px;
   }
