--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ p {
 }
 
 footer {
-  padding: 100px;
-  padding-top: 200px;
+  padding: 50px;
+  padding-top: 100px;
   background-color: rgb(24, 24, 24);
   color: white;
 }
@@ -34,18 +34,18 @@ footer {
 }
 
 .nav-wrapper {
-  display: flex;
-  justify-content: space-between;
   padding: 38px;
   font-weight: 600;
 }
 
 .left-side {
   display: flex;
+  position: fixed;
 }
 
 .right-side {
   display: flex;
+  justify-content: right;
 }
 
 .nav-wrapper > .left-side > div {
@@ -150,6 +150,7 @@ footer {
 
 .projects {
   padding-left: 128px;
+  padding-top: 100px;
   padding-bottom: 256px;
 }
 
@@ -203,7 +204,7 @@ footer {
 @media only screen and (max-width: 1200px) {
   .impression {
     padding-bottom: 50%;
-    padding-top: 40%;
+    padding-top: 20%;
   }
 
   .placeholder {
