--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ footer {
 .right-side {
   display: flex;
   justify-content: right;
+  position: relative;
 }
 
 .nav-wrapper > .left-side > div {
