--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,11 @@ footer {
     width: 200px;
     height: 200px;
   }
+
+  .LBC {
+    width: 772px;
+    height: 362px;
+  }
 }
 
 /*Cube-Race*/
